# fitcheck

./: .dockerignore  .env.example  .gitignore  README.md  dockerfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: agent.py  main.py  rag.py  tools.py
static/: index.html
tests/: test_agent.py
